force-app/main/default/objects/Social_Determinants__c/Social_Determinants__c.object-meta.xml
<CustomObject>
    <label>Social Determinants of Health</label>
    <fullName>Social_Determinants__c</fullName>
    <sharingModel>ReadWrite</sharingModel>
    <nameField>
        <type>AutoNumber</type>
        <label>SDOH Number</label>
        <displayFormat>SDOH-{0000}</displayFormat>
    </nameField>
</CustomObject>