force-app/main/default/objects/Social_Determinants__c/fields/Food_Insecurity__c.field-meta.xml
<CustomField>
    <fullName>Food_Insecurity__c</fullName>
    <label>Food Insecurity</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>