force-app/main/default/objects/Social_Determinants__c/fields/Housing_Status__c.field-meta.xml
<CustomField>
    <fullName>Housing_Status__c</fullName>
    <label>Housing Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Stable</fullName>
            </value>
            <value>
                <fullName>Unstable</fullName>
            </value>
            <value>
                <fullName>Transitional</fullName>
            </value>
        </valueSetDefinition>
        <valueSetType>Defined</valueSetType>
    </valueSet>
</CustomField>