force-app/main/default/objects/Social_Determinants__c/fields/Other_Barriers__c.field-meta.xml
<CustomField>
    <fullName>Other_Barriers__c</fullName>
    <label>Other Barriers</label>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>