force-app/main/default/objects/Social_Determinants__c/fields/Transportation_Issues__c.field-meta.xml
<CustomField>
    <fullName>Transportation_Issues__c</fullName>
    <label>Transportation Issues</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>