force-app/main/default/objects/Social_Determinants__c/fields/Utility_Burden__c.field-meta.xml
<CustomField>
    <fullName>Utility_Burden__c</fullName>
    <label>Utility Burden</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
        <value><fullName>Low</fullName><default>false</default></value>
        <value><fullName>Medium</fullName><default>false</default></value>
        <value><fullName>High</fullName><default>false</default></value>
        </valueSetDefinition>
        <valueSetType>Defined</valueSetType>
    </valueSet>
</CustomField>